--- a/timeline.html
+++ b/timeline.html
@@ -333,6 +333,7 @@
         <a href="index.html" class="back-btn">← Back to Presentation</a>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="trip_logic.js"></script>
     <script>
         const manager = window.tripManager;
